--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -32,10 +32,11 @@
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
 <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a>
+<a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a>
 <a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
 <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
 <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
-
+<a href="{% url 'allifmaalcommonapp:commonPaymentTerms' user_var glblslug %}">Payment Terms</a>
 
 </div>
 
