--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
@@ -88,6 +88,10 @@
               <td class="allif-fix-table-col">Department</td>
               <td>{{allifquery.department}}</td>
               </tr>
+               <tr>
+                <td class="allif-fix-table-col">Supplier</td>
+                <td>{{allifquery.supplier}}</td>
+                </tr>
         </tbody>
         </table>
       </div>
@@ -103,8 +107,8 @@
 
         
               <tr>
-                <td class="allif-fix-table-col">Supplier</td>
-                <td>{{allifquery.supplier}}</td>
+                <td class="allif-fix-table-col">Delivery</td>
+                <td>{{allifquery.delivery}}</td>
                 </tr>
                
                  
@@ -226,7 +230,11 @@
               <td>{{form.description}}</td>
           
               </tr>
-             
+             <tr>
+              <td class="allif-fix-table-col">Deliver To</td>
+              <td>{{form.delivery}}</td>
+          
+              </tr> 
           
         </tbody>
         </table>
@@ -263,7 +271,11 @@
                       <td>{{form.grandtotal}}</td>
                   
                       </tr>
-                   
+                  <tr>
+                      <td class="allif-fix-table-col">Currency</td>
+                      <td>{{form.currency}}</td>
+                  
+                      </tr>  
           </tbody>
           </table>
           </div>
