--- a/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
@@ -134,9 +134,10 @@
 
       </tbody>
     </table>
+    <h4>This module is not yet configured</h4>
     </div>
+    
    </div>
-
 
   
   </div><!--end....table column-->
