--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/withdrawals/withdrawal-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/withdrawals/withdrawal-search-pdf.html
@@ -7,30 +7,38 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div>
-    <table class="table-bordered">
+<div class="allif_pdf_main_body_container">
+  
+<!--start of ... table main dynamic content section-->
+<div class="allif-pdf-table-content-body-section">
+    <table class="allif-pdf-table-body">
+
     <tr>
-    <thead>
-    <tr class="allif-pdf-table-header">
-    <th colspan="4">Code</th>
     <th colspan="4">Description</th>
-    <th colspan="2" >Balance</th>
-    <th colspan="2">Category</th>
+    <th colspan="4">Bank</th>
+    <th colspan="2">Amount</th>
+    <th colspan="2">Date</th>
     </tr>
-    </thead>
+   
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="4">{{item.code}}</td>
     <td colspan="4">{{item.description}}</td>
-    <td colspan="2">{{item.balance|intcomma}}</td>
-    <td colspan="2"> {{item.category}}</td>
+    <td colspan="4">{{item.bank}}</td>
+    <td colspan="2"> {{item.amount|floatformat:2|intcomma}}</td>
+    <td colspan="2">{{item.date|date:'d/m/Y'}}</td>
+    
     </tr>
     {% endfor %}
+
     </tbody>
     </table>
-        
+    </div>
+    <!--start of ... table main dynamic content section-->
+
+  
 </div> 
+
 
 {% block scripts %}
 
