--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
@@ -113,14 +113,7 @@
         <!--end......side nav bar section....-->
 
 
-
-
-
-
-
-
-
-
+      <!--start of top nav bar-->
 
       <a class="nav-link" href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
       <!--button below is very important and shows the hidden links when the screen is small-->
@@ -132,8 +125,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
           </li>
-          <li><a class="nav-link" href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a></li>
-          
+         
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Navigate
