--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/search-pdf.html
@@ -8,30 +8,37 @@
 {%endblock%}
 {% block body %}
 <div class="allif_pdf_main_body_container">
-    <div class="allif_pdf_search_header">Companies Search Results</div>
-    <table class="table-bordered">
+  
+<!--start of ... table main dynamic content section-->
+<div class="allif-pdf-table-content-body-section">
+    <table class="allif-pdf-table-body">
+
     <tr>
-    <thead>
-    <tr class="allif-pdf-table-header">
-    <th>Company</th>
-    <th>Address</th>
-    <th>Owner</th>
-    <th>Date</th>
+    <th colspan="5">Company</th>
+    <th colspan="2">Address</th>
+    <th colspan="2">Phone</th>
+    <th colspan="3">Date</th>
     </tr>
-    </thead>
+   
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td>{{item.company}}</td>
-    <td>{{item.address}}</td>
-    <td>{{item.owner}}</td>
-    <td> {{item.date|date:'d/m/Y'}}</td>
+    <td colspan="5">{{item.company}}</td>
+    <td colspan="2">{{item.address}}</td>
+    <td colspan="2"> {{item.phone1}}</td>
+    <td colspan="3">{{item.date|date:'d/m/Y'}}</td>
+    
     </tr>
     {% endfor %}
+
     </tbody>
     </table>
-        
+    </div>
+    <!--start of ... table main dynamic content section-->
+
+  
 </div> 
+
 
 {% block scripts %}
 
@@ -39,3 +46,4 @@
 
 {% endblock %}
    
+ 
