--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoice-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoice-pdf.html
@@ -7,101 +7,119 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<style>
-    #allif-pdf-header{
-    font-size:2em;
-    color: #050eab;
-    float: right;
-    text-align: right;
-    margin: 0.4em;
-  }
-</style>
-
-<div id="allif-pdf-header">Invoice</div>
+<div class="allif_pdf_main_body_container">
   
-<table class="table-bordered">
+<!--start of ... Table header section-->
+<div class="allif-table-pdf-header">
+<table class="allif-pdf-table-header-section">
     <tr>
-      <th colspan="4">Invoice Details</th>
-      <th colspan="4">Supplier Details</th>
-      <th colspan="4">Terms Details</th>
+      <th>Quote Details</th>
+      <th>Supplier Details</th>
+      <th>Terms Details</th>
+      
     </tr>
 
     <tr> 
-    <th colspan="4">
-    <li>Invoice Ref: {{allifquery.number}}</li>
-    <li>Description: {{allifquery.description}}</li> 
-    <li>Date: {{allifquery.date|date:'d/m/Y'}}</li>
-    </th>
-    <th colspan="4">
-    <li>Customer:  {{allifquery.customer}}</li> 
-    <li>Phone: {{allifquery.customer.phone}}</li> 
-    <li>Customer Address: {{allifquery.customer.address}}</li> 
-    </th>
-    <th colspan="4">
-    <li>Comments: {{allifquery.comments}}</li>
-    <li>Terms : {{allifquery.terms}}</li>
-    </th>
+    <td>
+    <li><span class="allif-pdf-table-content-headers">Quote.No.</span> {{allifquery.number}}</li>
+    <li><span class="allif-pdf-table-content-headers">Department</span> {{allifquery.department}}</li>
+    <li><span class="allif-pdf-table-content-headers">Date</span> {{allifquery.date|date:'d/m/Y'}}</li>
+    </td>
+
+    <td>
+    <li><span class="allif-pdf-table-content-headers">Customer</span> {{allifquery.customer}}</li>
+    <li><span class="allif-pdf-table-content-headers">Phone</span> {{allifquery.customer.phone}}</li>
+    <li><span class="allif-pdf-table-content-headers">Address</span> {{allifquery.customer.address}}</li>
+    </td>
+
+    <td>
+    <li><span class="allif-pdf-table-content-headers">Comments</span> {{allifquery.comments}}</li>
+    <li><span class="allif-pdf-table-content-headers">Terms</span> {{allifquery.payment_terms}}</li>
+    <li><span class="allif-pdf-table-content-headers">Delivery</span> {{allifquery.delivery}}</li>
+
+    </td>
+
     </tr>
 
     </table>
-
-<div>
-    <table class="table-bordered">
-    <tr>
-    <thead>
-    <tr class="allif-pdf-table-header">
+    </div>
+    <!--end of ... Table header section-->
+    <div class="allif-pdf-table-content-body-header">
+    <span class="allif-pdf-table-content-headers">Subject: </span> {{allifquery.description}}
     
-    <th colspan="4">Item</th>
-    <th colspan="4">Quantity</th>
+    </div>
+
+
+<!--start of ... table main dynamic content section-->
+<div class="allif-pdf-table-content-body-section">
+    <table class="allif-pdf-table-body">
+
+    <tr>
+    <th colspan="5">Item Description</th>
+    <th colspan="2">Quantity</th>
     <th colspan="2">Unit Price</th>
-    <th colspan="2">Amount</th>
+    <th colspan="3">Amount</th>
     </tr>
-    </thead>
+   
     <tbody>
     {% for item in allifqueryset %}
     <tr>
-    <td colspan="4">{{item.description}}</td>
-    <td colspan="4">{{item.quantity}}</td>
-    <td colspan="2">{{item.description.unitPrice|floatformat:2|intcomma}}</td>
-    <td colspan="2"> {{item.invoice_selling_price|floatformat:2|intcomma}}</td>
+    <td colspan="5">{{item.description}}</td>
+    <td colspan="2">{{item.quantity|floatformat:2|intcomma}}</td>
+    <td colspan="2"> {{item.description.unitPrice|floatformat:2|intcomma}}</td>
+    <td colspan="3">{{item.quote_selling_price|floatformat:2|intcomma}}</td>
+    
     </tr>
     {% endfor %}
+
+    </tbody>
+    </table>
+    </div>
+    <!--start of ... table main dynamic content section-->
+
+    <div class="allif-pdf-table-body-summary-section">
+    <table class="allif-pdf-table-body-summary">
+    <tbody>
+    
     <tr>
-    <td colspan="8"></td>
-    <td colspan="2" class="text-right"> <strong> Sub Total</strong> </td>
-    <td colspan="2"> <strong>{{allifquery.total|floatformat:2|intcomma}}</strong> </td>
-    </tr>
-    <tr>
-    <td colspan="8"></td>
-    <td colspan="2" class="text-right"> <strong> Discount </strong> </td>
-    <td colspan="2"> <strong>{{allifquery.discountAmount|floatformat:2|intcomma}}</strong> </td>
-    </tr>
-    <tr>
-    <td colspan="8"></td>
-    <td colspan="2" class="text-right"> <strong> Add Tax </strong> </td>
-    <td colspan="2"> <strong>{{allifquery.taxAmount|floatformat:2|intcomma}}</strong> </td>
+    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
+    <td colspan="4"> Sub Total </td>
+    <td colspan="3">{{allifquery.total|floatformat:2|intcomma}} </td>
     </tr>
 
     <tr>
-    <td colspan="8"></td>
-    <td colspan="2" class="text-right"> <strong>Grand Total </strong> </td>
-    <td colspan="2"> <strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong> </td>
+    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
+    <td colspan="4"> Discount Amount </td>
+    <td colspan="3"> {{allifquery.discountAmount|floatformat:2|intcomma}}</td>
+    </tr>
+
+     <tr>
+    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
+    <td colspan="4"> Tax Amount </td>
+    <td colspan="3"> {{allifquery.taxAmount|floatformat:2|intcomma}}</td>
+    </tr>
+
+    <tr>
+    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
+    <td colspan="4"> Grand Total Tax Inclusive {{allifquery.currency}}</td>
+    <td colspan="3">{{allifquery.grandtotal|floatformat:2|intcomma}} </td>
     </tr>
 
     </tbody>
     </table>
-        
+    </div>
+  
 </div> 
+
 
 {% block scripts %}
 
 {% endblock %}
 
 {% endblock %}
-
 {% block footer %}
 <h6>Created By: {{usr_var}}</h6>
 <h6>Generated On: {{date_today}}</h6>
 
 {% endblock %}
-   
+ 
