--- a/allifmaalcommonapp/templates/allifmaalcommonapp/reports/available-stock-report.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/reports/available-stock-report.html
@@ -8,24 +8,25 @@
 {%endblock%}
 {% block body %}
 <div class="allif_pdf_main_body_container">
-    <div class="allif_pdf_search_header">Statement Search Results</div>
+    <div class="allif_pdf_search_header">Available Stock</div>
     <table class="table-bordered">
     <tr>
     <thead>
     <tr class="allif-pdf-table-header">
-    <th>Invoice Ref.</th>
-    <th>Customer</th>
-    <th>Amount</th>
-    <th>Date</th>
+    <th>Part Number</th>
+    <th>Category</th>
+    <th>Description</th>
+    <th>Quantity</th>
     </tr>
     </thead>
     <tbody>
-    {% for item in searched_data %}
+    {% for item in allifqueryset %}
     <tr>
-    <td>{{item.number}}</td>
-    <td>{{item.customer}}</td>
-    <td>{{item.total|floatformat:2|intcomma}}</td>
-    <td> {{item.date|date:'d/m/Y'}}</td>
+    <td>{{item.partNumber}}</td>
+    <td>{{item.category}}</td>
+    <td> {{item.description}}</td>
+    <td>{{item.quantity|floatformat:2|intcomma}}</td>
+    
     </tr>
     {% endfor %}
     </tbody>
