--- a/allifmaalcommonapp/templates/allifmaalcommonapp/reports/reports.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/reports/reports.html
@@ -7,166 +7,99 @@
 {%endblock%}
 {% block body %}
 <div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+ <a class="amel-table-list-identifier">Reports:</a>
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+ 
+</div>
+
+    </div><!--end....header column-->
   
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">Reports:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonCreditorsReportpdf' user_var glblslug %}">Creditors Report</a>
-    <a href="{% url 'allifmaalcommonapp:commonDebtorsReport' user_var glblslug %}">Debtors Report</a>
-    <a href="{% url 'allifmaalcommonapp:commonAvailableStockpdf' user_var glblslug %}">Available Stock Report</a>
-   
-  
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
-<div class="col-md-12"> <!--start....table column-->
-    
-  
+  <div class="table-details-content-description">Available Reports</div>
+  <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Quote No.</td>
-        <td>Customer</td>
-        <td>Value</td>
-        <td>Stage</td>
-        <td>Date</td>
-        <td>Owner</td>
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+        <tr>
+          <td class="allif-fix-table-col">Creditors Report</td>
+          <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonCreditorsReportpdf' user_var glblslug %}">Download</a></td>
+          </tr>
       
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         <tr>
+        <td class="allif-fix-table-col">Debtors Report</td>
+        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonDebtorsReport' user_var glblslug %}">Download</a></td>
         </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
-       
-            <td>
-            {{item.customer}}
-          </td>
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
-          </td>
-          <td>
-            {{item.prospect}}
-          </td>
-        
-          <td>
-            {{item.date|date:'d/m/Y'}}
-          </td>
-          <td>
-            {{item.owner}}
-          </td>
-    
-         <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
-              
-              
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-         
-        </td>
-       <td> . . . </td>
-       <td></td>
-      
-  
-    </tr>
-    {% endfor %}
-    {% if searched_data %}
-    {% for item in searched_data %}
-    <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
      
-          <td>
-          {{item.customer}}
-        </td>
-        <td>
-          <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
-        </td>
-        <td>
-          {{item.prospect}}
-        </td>
-      
-        <td>
-          {{item.date|date:'d/m/Y'}}
-        </td>
-        <td>
-          {{item.owner}}
-        </td>
-  
-       <td>
-        <div class="dropdown allifmaal-content-dropdown">
-          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-          <div class="dropdown-content">
-            <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-            <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
-            
-            
-            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-            
+   
+          </tbody>
+          </table>
           </div>
-        </div>
-        <div class="dropdown allif-confirm-action">
-          
-          <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-          <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-        </div>
-
-       
-      </td>
-     <td> . . . </td>
-     <td></td>
+          </div>
     
-
-  </tr>
-    {% endfor %}
-      {%endif %}
-
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-
-  
-  </div><!--end....table column-->
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+        <td class="allif-fix-table-col">Available Stock</td>
+        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonAvailableStockpdf' user_var glblslug %}">Download</a></td>
+        </tr>
+     
+          </tbody>
+          </table>
   </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+<!--end of table-->
 
 </div><!--end of main container of the page....-->
+
+</div>
 </div>
   {% block scripts %}
- 
+
   {% endblock %}
-  
    {% endblock %}
    
