--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-details.html
@@ -333,6 +333,16 @@
                   <td>{{form.delivery}}</td>
               
                   </tr>
+                   <tr>
+                  <td class="allif-fix-table-col">Payment Terms</td>
+                  <td>{{form.payment_terms}}</td>
+              
+                  </tr>
+                   <tr>
+                  <td class="allif-fix-table-col">Currency</td>
+                  <td>{{form.currency}}</td>
+              
+                  </tr>
             
             <tr>
               <td class="allif-fix-table-col">Action</td>
