--- a/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
@@ -134,7 +134,8 @@
 
       </tbody>
     </table>
-    <h4>This module is not yet configured</h4>
+    <h4>{{glbl_place_holder}}</h4>
+    
     </div>
     
    </div>
