--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salaries_search_pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salaries_search_pdf.html
@@ -8,34 +8,48 @@
 {%endblock%}
 {% block body %}
 <div class="allif_pdf_main_body_container">
-    <div class="allif_pdf_search_header">Staff Salaries Search Results</div>
-    <table class="table-bordered">
+
+<!--start of ... table main dynamic content section-->
+<div class="allif-pdf-table-content-body-section">
+    <table class="allif-pdf-table-body">
+
     <tr>
-    <thead>
-    <tr class="allif-pdf-table-header">
-    <th>Staff</th>
-    <th>Description</th>
-    <th>Amount</th>
-    <th>Date</th>
+    <th colspan="8">Staff</th>
+    <th colspan="2">Description</th>
+   <th colspan="2">Amount</th>
+    <th colspan="2">Date</th>
     </tr>
-    </thead>
+
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td>{{item.staff}}</td>
-    <td>{{item.description}}</td>
-    <td>{{item.amount|floatformat:2|intcomma}}</td>
-    <td> {{item.date|date:'d/m/Y'}}</td>
+    <td colspan="8">{{item.staff}}</td>
+    <td colspan="2"> {{item.description}}</td>
+   <td colspan="2"> {{item.amount|floatformat:2|intcomma}}</td>
+    <td colspan="2"> {{item.date|date:'d/m/Y'}}</td>
+    
     </tr>
     {% endfor %}
+
     </tbody>
     </table>
-        
+    </div>
+    <!--start of ... table main dynamic content section-->
+
+    <div class="allif-pdf-table-body-summary-section">
+    <table class="allif-pdf-table-body-summary">
+    <tbody>
+  
+  
 </div> 
+
 
 {% block scripts %}
 
 {% endblock %}
 
 {% endblock %}
-   
+{% block footer %}
+
+{% endblock %}
+ 
