--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoice-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoice-pdf.html
@@ -67,7 +67,7 @@
     <td colspan="5">{{item.description}}</td>
     <td colspan="2">{{item.quantity|floatformat:2|intcomma}}</td>
     <td colspan="2"> {{item.description.unitPrice|floatformat:2|intcomma}}</td>
-    <td colspan="3">{{item.quote_selling_price|floatformat:2|intcomma}}</td>
+    <td colspan="3">{{item.invoice_selling_price|floatformat:2|intcomma}}</td>
     
     </tr>
     {% endfor %}
