--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entries-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entries-search-pdf.html
@@ -14,19 +14,23 @@
     <table class="allif-pdf-table-body">
 
     <tr>
-    <th colspan="2">Number</th>
-    <th colspan="6">Customer</th>
-    <th colspan="2">Amount</th>
-    <th colspan="2">Date</th>
+        <th colspan="2">Owner</th>
+    <th colspan="4">Description</th>
+    <th colspan="2">Debit</th>
+    <th colspan="2">Credit</th>
+    <th colspan="2">Balance</th>
     </tr>
    
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="2">{{item.number}}</td>
-    <td colspan="6">{{item.customer}}</td>
-    <td colspan="2"> {{item.grandtotal|floatformat:2|intcomma}}</td>
-    <td colspan="2">{{item.date|date:'d/m/Y'}}</td>
+        
+     <td colspan="2">{{item.ledgowner}}</td>
+    <td colspan="4">{{item.comments}}</td>
+
+    <td colspan="2"> {{item.debit|floatformat:2|intcomma}}</td>
+    <td colspan="2">{{item.credit|floatformat:2|intcomma}}</td>
+    <td colspan="2">{{item.balance|floatformat:2|intcomma}}</td>
     
     </tr>
     {% endfor %}
