--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/po-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/po-search-pdf.html
@@ -1,3 +1,4 @@
+
 {% extends 'allifmaalcommonapp/base/uimainbase/allifpdfuibase.html'%}
 {% load humanize %}
 {% load static %}
@@ -8,29 +9,35 @@
 {%endblock%}
 {% block body %}
 <div class="allif_pdf_main_body_container">
-    <div class="allif_pdf_search_header">Customers Search Results</div>
-    <table class="table-bordered">
+
+<!--start of ... table main dynamic content section-->
+<div class="allif-pdf-table-content-body-section">
+    <table class="allif-pdf-table-body">
+
     <tr>
-    <thead>
-    <tr class="allif-pdf-table-header">
-    <th>PO</th>
-    <th>Supplier</th>
-    <th>Amount</th>
-    <th>Date</th>
+    <th colspan="2">PO</th>
+    <th colspan="5">Supplier</th>
+    <th colspan="3">Amount</th>
+    <th colspan="2">Date</th>
     </tr>
-    </thead>
+   
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td>{{item.po_number}}</td>
-    <td>{{item.supplier}}</td>
-    <td>{{item.amount|intcomma}}</td>
-    <td> {{item.date|date:'d/m/Y'}}</td>
+    <td colspan="2">{{item.po_number}}</td>
+    <td colspan="5">{{item.supplier}}</td>
+    <td colspan="2"> {{item.amount|floatformat:2|intcomma}}</td>
+    <td colspan="3">{{item.date|date:'d/m/Y'}}</td>
+    
     </tr>
     {% endfor %}
+
     </tbody>
     </table>
-        
+    </div>
+    <!--start of ... table main dynamic content section-->
+
+  
 </div> 
 
 {% block scripts %}
@@ -39,3 +46,4 @@
 
 {% endblock %}
    
+ 
