finished common app and db changed to mysql

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-items.html
@@ -102,7 +102,7 @@
           <tr>
             
             <td id="allif-table-sums-section" colspan="3">Sub Total</td>
-            <td id="allif-table-sums-section">{{allifquery.amount|intcomma}}</td>
+            <td id="allif-table-sums-section">{{allifquery.amount|floatformat:2|intcomma}}</td>
             <td id="allif-table-sums-section" colspan="3"></td>
            
           </tr>
